--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,19 +5,24 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+
 - task: Docker@2
+  displayName: Build and Push Docker Image
   inputs:
     containerRegistry: 'dockerhub-connection'
     repository: 'ferozuddin/devops-app'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
+    tags: |
+      latest
 
 - task: SSH@0
+  displayName: Deploy Container on AWS EC2
   inputs:
     sshEndpoint: 'aws-ec2-ssh'
     runOptions: 'commands'
     commands: |
-      docker pull yourdockerhubusername/devops-app
+      docker pull ferozuddin/devops-app:latest
       docker stop devops-app || true
       docker rm devops-app || true
-      docker run -d -p 5000:5000 --name devops-app yourdockerhubusername/devops-app
+      docker run -d -p 5000:5000 --name devops-app ferozuddin/devops-app:latest
