--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,6 @@ steps:
     runOptions: 'commands'
     commands: |
       docker pull ferozuddin/devops-app:latest
-      docker stop devops-app || true
-      docker rm devops-app || true
-      docker run -d -p 5000:5000 --name devops-app ferozuddin/devops-app:latest
+      docker rm -f devops-app 2>/dev/null || true
+      docker run -d -p 5000:5000 --name devops-app --restart always ferozuddin/devops-app:latest
+
