--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,18 @@
-- task: Docker@2
-  displayName: Build and Push Docker Image
+trigger:
+- main
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+steps:
+- task: UsePythonVersion@0
   inputs:
-    containerRegistry: 'dockerhub-connection'
-    repository: 'ferozuddin/devops-app'
-    command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
-    tags: |
-      $(Build.BuildId)
-      latest
+    versionSpec: '3.x'
+
+- script: |
+    pip install -r requirements.txt
+  displayName: 'Install dependencies'
+
+- script: |
+    echo "Build step running"
+  displayName: 'Build step'
